# xbsl-lint

./: .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  NOTICE  README.md  README.ru.md  blume.config.ts  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  setup.py
.github/workflows/: docs.yml  native-wheels.yml  pypi-publish.yml  vscode-publish.yml
demo/: README.md
demo/acme/tasks/: Проект.yaml
docs/: CLI.md  CLI.ru.md  DESIGNER.md  DESIGNER.ru.md  DOCS_PANEL.md  DOCS_PANEL.ru.md  GUIDE.md  GUIDE.ru.md  RULES.md  RULES.ru.md  changelog.md  changelog.ru.md  index.md  index.ru.md  vscode.md  vscode.ru.md
editors/vscode/: .vscodeignore  CHANGELOG.md  CHANGELOG.ru.md  LICENSE  PUBLISHING.md  README.md  README.ru.md  icon.html  language-configuration.json  package-lock.json  package.json  package.nls.json  package.nls.ru.json  tsconfig.json
editors/vscode/l10n/: bundle.l10n.ru.json
editors/vscode/src/: baselineCore.ts  codeActions.ts  codeActionsCore.ts  componentIcons.ts  componentIconsCore.ts  deploy.ts  docsClient.ts  docsPanel.ts  docsTree.ts  engineMeta.ts  excludeAction.ts  extension.ts  formData.ts  formDataCore.ts  formDesigner.ts  formDesignerCore.ts  formPalette.ts  formPaletteCore.ts  formPreview.ts  formPreviewCore.ts  formProps.ts  formPropsCore.ts  formSearch.ts  formStructure.ts  formStructureCore.ts  hoverDocs.ts  installer.ts  linter.ts  lspClient.ts  metaSchemaClient.ts  metadataCore.ts  metadataProps.ts  metadataTree.ts  navCore.ts  navigation.ts  palettes.ts  propsModes.ts  readonly.ts  report.ts  reveal.ts  (+7 more)
editors/vscode/syntaxes/: xbsl.tmLanguage.json
editors/vscode/test/: baselineCore.test.ts  codeActionsCore.test.ts  componentIconsCore.test.ts  formDataCore.test.ts  formDesignerCore.test.ts  formPaletteCore.test.ts  formPreviewCore.test.ts  formPropsCore.test.ts  formStructureCore.test.ts  metadataCore.test.ts  navCore.test.ts  propsModes.test.ts  templatesCore.test.ts  workspaceCore.test.ts
scripts/: gen-cli-docs.py  sync-docs.mjs  sync-vscode-doc.mjs
tests/: conftest.py  test_alias.py  test_baseline.py  test_bindingcomplete.py  test_call_arity.py  test_call_arity_cross.py  test_catch_exceptions.py  test_changelog.py  test_cli.py  test_cli_docs.py  test_codeclimate.py  test_corpus.py  test_dataset.py  test_docs.py  test_extract_docs.py  test_extract_stdlib.py  test_extract_uischema.py  test_fixer.py  test_form_surfaces.py  test_formhandlers.py  test_formmodel.py  test_i18n.py  test_index.py  test_language.py  test_lexer.py  test_libs.py  test_lsp.py  test_lsp_nav.py  test_mcp.py  test_meta_surfaces.py  test_metadata_sync.py  test_metamodel.py  test_packaging.py  test_parser.py  test_plugins.py  test_report.py  test_return_mismatch.py  test_rule_choice_list.py  test_rule_code_syntax.py  test_rule_component_values.py  (+29 more)
tools/: _distro.py  extract_docs.py  extract_grammar.py  extract_metamodel.py  extract_stdlib.py  extract_terms.py  extract_uischema.py  lsp-dev.cmd
xbsl/: __init__.py  __main__.py  baseline.py  bindingcomplete.py  cli.py  dataset.py  diagnostics.py  docs.py  engine.py  fixer.py  formedits.py  formhandlers.py  formmodel.py  i18n.py  indexer.py  lexer.py  libs.py  lsp.py  lsp_nav.py  mcp_server.py  metamodel.py  parser.py  plugins.py  report.py  scaffold.py  selfupdate.py  terms.py  uischema.py  web.py
xbsl/rules/: __init__.py  _syntax.py  call_arity.py  catch_exceptions.py  choice_list.py  code_structure.py  code_syntax.py  component_values.py  dynlist_fields.py  enum_nullable.py  enum_values.py  environment.py  handlers.py  local_visibility.py  locals_usage.py  naming.py  ns_objects.py  project.py  queries.py  ref_fields.py  reserved_names.py  resources.py  return_mismatch.py  security.py  semantics.py  size_stretch.py  statement_no_effect.py  structure.py  style_conditions.py  style_layout.py  style_naming.py  style_strings.py  style_types.py  syntax_parse.py  typography.py  undefined_names.py  unknown_members.py  unused_methods.py  whitespace.py  yaml_imports.py  (+3 more)
xbsllint/: __init__.py  baseline.py  cli.py  dataset.py  diagnostics.py  docs.py  engine.py  fixer.py  i18n.py  indexer.py  lexer.py  lsp.py  lsp_nav.py  mcp_server.py  plugins.py  report.py  web.py
xbsllint/rules/: __init__.py  _syntax.py  code_structure.py  dynlist_fields.py  enum_nullable.py  enum_values.py  environment.py  handlers.py  local_visibility.py  locals_usage.py  naming.py  ns_objects.py  queries.py  ref_fields.py  reserved_names.py  semantics.py  structure.py  style_conditions.py  style_layout.py  style_naming.py  style_strings.py  style_types.py  typography.py  unused_methods.py  whitespace.py  yaml_imports.py  yaml_properties.py  yaml_schema.py  yaml_types.py
(+4 files in other folders)
