[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "xbsllint"
version = "0.13.0"
description = "Линтер исходников 1С:Элемент (пары .yaml/.xbsl)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "xbsl-lint contributors" }]
keywords = ["1c", "1c-element", "xbsl", "linter", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/keyfire/xbsl-lint"
Repository = "https://github.com/keyfire/xbsl-lint"
Issues = "https://github.com/keyfire/xbsl-lint/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "pymorphy3>=2.0"]
mcp = ["mcp>=1.2"]
lsp = ["pygls>=1.3,<2"]
# Морфология русского языка: правило naming/number (справочники во множественном числе,
# перечисления в единственном) без неё молчит - гадать по окончаниям нельзя.
morph = ["pymorphy3>=2.0"]

[project.scripts]
xbsllint = "xbsllint.cli:main"
xbsllint-mcp = "xbsllint.mcp_server:main"
xbsllint-web = "xbsllint.web:main"
xbsllint-lsp = "xbsllint.lsp:main"

[tool.setuptools]
packages = ["xbsllint", "xbsllint.rules"]

[tool.setuptools.package-data]
xbsllint = ["data/element/index.json", "data/element/*/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
