[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "xbsl"
version = "0.20.0"
description = "Инструментарий XBSL (1С:Элемент): линтер, LSP, документация, индекс проекта, скаффолдинг метаданных"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "xbsl contributors" }]
keywords = ["1c", "1c-element", "xbsl", "linter", "lsp", "scaffolding", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/keyfire/xbsl"
Repository = "https://github.com/keyfire/xbsl"
Issues = "https://github.com/keyfire/xbsl/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "pymorphy3>=2.0"]
mcp = ["mcp>=1.2"]
lsp = ["pygls>=1.3,<2"]
# Морфология русского языка: правило naming/number (справочники во множественном числе,
# перечисления в единственном) без неё молчит - гадать по окончаниям нельзя.
morph = ["pymorphy3>=2.0"]

[project.scripts]
xbsl = "xbsl.cli:main"
xbsl-mcp = "xbsl.mcp_server:main"
xbsl-web = "xbsl.web:main"
xbsl-lsp = "xbsl.lsp:main"
# Команды под старым именем пакета остаются псевдонимами на переходный период.
xbsllint = "xbsl.cli:main"
xbsllint-mcp = "xbsl.mcp_server:main"
xbsllint-web = "xbsl.web:main"
xbsllint-lsp = "xbsl.lsp:main"

[tool.setuptools]
# xbsllint – пакет-псевдоним: импорт xbsllint/xbsllint.X отдаёт модули xbsl (см. его __init__).
packages = ["xbsl", "xbsl.rules", "xbsllint"]

[tool.setuptools.package-data]
xbsl = ["data/element/index.json", "data/element/*/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
